--- a/index.html
+++ b/index.html
@@ -1,49 +1,64 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Favicon -->
-    <link rel="shortcut icon" href="./assets/logo.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon" />
     <!-- CSS -->
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style.css" />
     <!-- Font Awesone -->
-    <script src="https://kit.fontawesome.com/c3ef53a0a4.js" crossorigin="anonymous"></script>
-    <!-- JavaScript -->
-
-    <title>Bruno H | Bateria</title>
-</head>
-<body>
+    <script
+      src="https://kit.fontawesome.com/c3ef53a0a4.js"
+      crossorigin="anonymous"
+    ></script>
+    <!-- GOOGLE ANALYTICS -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-TJQ2XJZPTD"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "G-TJQ2XJZPTD");
+    </script>
+    <title>Bateria | Bruno Dórea</title>
+  </head>
+  <body>
     <h1>Bateria</h1>
 
     <div class="keys">
-        <div data-key="keyq" class="key">Q</div>
-        <div data-key="keyw" class="key">W</div>
-        <div data-key="keye" class="key">E</div>
+      <div data-key="keyq" class="key">Q</div>
+      <div data-key="keyw" class="key">W</div>
+      <div data-key="keye" class="key">E</div>
 
-        <div data-key="keya" class="key">A</div>
-        <div data-key="keys" class="key">S</div>
-        <div data-key="keyd" class="key">D</div>
+      <div data-key="keya" class="key">A</div>
+      <div data-key="keys" class="key">S</div>
+      <div data-key="keyd" class="key">D</div>
 
-        <div data-key="keyz" class="key">Z</div>
-        <div data-key="keyx" class="key">X</div>
-        <div data-key="keyc" class="key">C</div>
+      <div data-key="keyz" class="key">Z</div>
+      <div data-key="keyx" class="key">X</div>
+      <div data-key="keyc" class="key">C</div>
     </div>
     <div class="composer">
-        <input type="text" id="input" placeholder="Faça uma composição..." />
-        <button>Tocar</button>
+      <input type="text" id="input" placeholder="Faça uma composição..." />
+      <button>Tocar</button>
     </div>
 
-<!-- FOOTER -->
-<footer id="footer">
-    <div class="container">
-    <div class="copyright">
-    &copy; Created by <strong><span>Bruno Dórea</span></strong>. Todos direitos reservados.
-    </div>
-    </div>
-</footer>
-<!-- FOOTER -->
+    <!-- FOOTER -->
+    <footer id="footer">
+      <div class="container">
+        <div class="copyright">
+          &copy; Created by <strong><span>Bruno Dórea</span></strong
+          >. Todos direitos reservados.
+        </div>
+      </div>
+    </footer>
+    <!-- FOOTER -->
     <audio id="s_keyq" src="./assets/sounds/keyq.wav"></audio>
     <audio id="s_keyw" src="./assets/sounds/keyw.wav"></audio>
     <audio id="s_keye" src="./assets/sounds/keye.wav"></audio>
@@ -54,5 +69,5 @@
     <audio id="s_keyx" src="./assets/sounds/keyx.wav"></audio>
     <audio id="s_keyc" src="./assets/sounds/keyc.wav"></audio>
     <script src="./js/script.js"></script>
-</body>
+  </body>
 </html>
